<resources>
    <string name="app_name">Lab01c2016</string>
    <string name="email_label">Correo Electrónico</string>
    <string name="cuit_label">CUIT</string>
    <string name="monto_label">Importe</string>
    <string name="dias_label">Cantidad de Días de la Inversión</string>
    <string name="rendimiento_label">Rendimiento</string>
    <string name="button_text">Hacer Plazo Fijo</string>
    <string name="checkbox_text">Renovar Automáticamente el Vencimiento</string>
    <string name="successString"><b>Plazo fijo realizado!</b> Recibirá $%1$.2f al vencimiento.</string>
    <string name="errorString"><b>Error!</b> Los campos marcados tienen un error.</string>
</resources>
