<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ns.dam.isi.frsf.utn.edu.ar.lab01c2016.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="#165800"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email_label"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:textIsSelectable="false"
        android:paddingTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailET"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView"
        android:hint="Ingrese su Correo Electrónico" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cuit_label"
        android:id="@+id/textView3"
        android:layout_below="@+id/emailET"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cuitET"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/emailET"
        android:hint="Ingrese su CUIT" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/monto_label"
        android:id="@+id/textView4"
        android:layout_below="@+id/cuitET"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/importeET"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/cuitET"
        android:hint="Ingrese un número" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dias_label"
        android:id="@+id/textView5"
        android:layout_below="@+id/importeET"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/diasInversionSeekBar"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:indeterminate="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1"
        android:id="@+id/diasTextView"
        android:textAlignment="center"
        android:layout_below="@+id/diasInversionSeekBar"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/diasInversionSeekBar"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rendimiento_label"
        android:id="@+id/textView7"
        android:layout_below="@+id/diasTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$0.0"
        android:id="@+id/montoCalculadoTextView"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text"
        android:id="@+id/renovarCheck"
        android:layout_below="@+id/montoCalculadoTextView"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:id="@+id/calcularButton"
        android:layout_below="@+id/renovarCheck"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/diasTextView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/resultadoTextView"
        android:layout_below="@+id/calcularButton"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/calcularButton"
        android:gravity="center_horizontal"/>

</RelativeLayout>
